--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">stream-app</string>
+    <string name="prompt_msg_livestream_started">LiveStream Started</string>
+    <string name="prompt_msg_livestream_end">LiveStream Ended</string>
 </resources>
